--- a/index.html
+++ b/index.html
@@ -254,6 +254,10 @@
                 </div>
             </div>
         </div>
+        <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-400">
+            <p>Created by Abhishek Kumar Paswan</p>
+            <p>&copy; 2025 Lumina. All rights reserved.</p>
+        </div>
     </footer>
 
     <button id="back-to-top" class="fixed bottom-8 right-8 bg-indigo-600 text-white p-3 rounded-full shadow-lg opacity-0 transition-opacity duration-300 hover:bg-indigo-700">
